@@ -19,6 +19,7 @@
 
 #include <algorithm>
 #include <boost/math/common_factor.hpp>
+#include <boost/range/algorithm.hpp>
 #include <cstring>
 #include <zlib.h>
 
@@ -107,9 +108,10 @@ qtmp4_reader_c::qtmp4_reader_c(const track_info_c &ti,
   , m_time_scale(1)
   , m_compression_algorithm(0)
   , m_main_dmx(-1)
-  , m_debug_chapters(debugging_requested("qtmp4") || debugging_requested("qtmp4_full") || debugging_requested("qtmp4_chapters"))
-  , m_debug_headers( debugging_requested("qtmp4") || debugging_requested("qtmp4_full") || debugging_requested("qtmp4_headers"))
-  , m_debug_tables(                                  debugging_requested("qtmp4_full") || debugging_requested("qtmp4_tables"))
+  , m_debug_chapters(    debugging_requested("qtmp4") || debugging_requested("qtmp4_full") || debugging_requested("qtmp4_chapters"))
+  , m_debug_headers(     debugging_requested("qtmp4") || debugging_requested("qtmp4_full") || debugging_requested("qtmp4_headers"))
+  , m_debug_tables(                                      debugging_requested("qtmp4_full") || debugging_requested("qtmp4_tables"))
+  , m_debug_interleaving(debugging_requested("qtmp4") || debugging_requested("qtmp4_full") || debugging_requested("qtmp4_interleaving"))
 {
 }
 
@@ -301,6 +303,8 @@ qtmp4_reader_c::parse_headers() {
 
     dmx->ok = true;
   }
+
+  detect_interleaving();
 
   read_chapter_track();
 
@@ -1687,6 +1691,37 @@ qtmp4_reader_c::recode_chapter_entries(std::vector<qtmp4_chapter_entry_t> &entri
   converter->enable_byte_order_marker_detection(false);
 }
 
+void
+qtmp4_reader_c::detect_interleaving() {
+  std::vector<qtmp4_demuxer_cptr> demuxers_to_read;
+  boost::remove_copy_if(m_demuxers, std::back_inserter(demuxers_to_read), [&](const qtmp4_demuxer_cptr &dmx) {
+      return !(dmx->ok && (dmx->is_audio() || dmx->is_video()) && demuxing_requested(dmx->type, dmx->id) && (dmx->sample_table.size() > 1));
+    });
+
+  if (demuxers_to_read.size() < 2) {
+    mxdebug_if(m_debug_interleaving, boost::format("Interleaving: Not enough tracks to care about interleaving.\n"));
+    return;
+  }
+
+  std::vector<float> gradients;
+  for (auto &dmx : demuxers_to_read) {
+    auto cmp = [](const qt_sample_t &s1, const qt_sample_t &s2) -> uint64_t { return s1.pos < s2.pos; };
+    uint64_t min = boost::min_element(dmx->sample_table, cmp)->pos;
+    uint64_t max = boost::max_element(dmx->sample_table, cmp)->pos;
+    gradients.push_back(static_cast<float>(max - min) / m_in->get_size());
+
+    mxdebug_if(m_debug_interleaving, boost::format("Interleaving: track id %1% min %2% max %3% gradient %4%\n") % dmx->id % min % max % gradients.back());
+  }
+
+  float badness = *boost::max_element(gradients) - *boost::min_element(gradients);
+  mxdebug_if(m_debug_interleaving, boost::format("Interleaving: interleaving badness: %1%\n") % badness);
+
+  if (0.4 < badness) {
+    m_in->enable_buffering(false);
+    mxdebug_if(m_debug_interleaving, boost::format("Interleaving: Turning off buffering due to lack of interleaving on the file\n"));
+  }
+}
+
 // ----------------------------------------------------------------------
 
 void
@@ -2070,4 +2105,16 @@ qtmp4_demuxer_c::read_first_bytes(memory_cptr &buf,
   }
 
   return 0 == num_bytes;
+}
+
+bool
+qtmp4_demuxer_c::is_audio()
+  const {
+  return 'a' == type;
+}
+
+bool
+qtmp4_demuxer_c::is_video()
+  const {
+  return 'v' == type;
 }
